[global]
verbose=0

[metadata]
name=Services-Monitoring
version=0.1

[options]
python_requires= >=3.8
setup_requires=pytest-runner
tests_require=
    pytest
    pytest-cov
    pylama

[options.packages.find]
where=src
exclude=tests

[aliases]
test=pytest

[tool:pytest]
addopts = --verbose  --cov --cov-report=xml

[coverage:report]
fail_under=60
show_missing=true

[coverage:run]
source=src
branch=true
